--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2 class="text-4xl font-bold mb-8">
      About Us
     </h2>
-    <img alt="School building with students and teachers" class="mb-4 rounded-lg" height="300" src="assets/470172056_574808535248117_6687799956838457358_n.jpg" width="300"/>
+    <img alt="School building with students and teachers" class="mb-4 rounded-lg mx-auto" height="300" src="assets/470172056_574808535248117_6687799956838457358_n.jpg" width="300"/>
     <p class="text-lg mb-8">
      Al Ibrahim Model School is dedicated to providing quality education to students, fostering their growth and development in a nurturing environment.
     </p>
