--- a/index.html
+++ b/index.html
@@ -1,175 +1,112 @@
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Al Ibrahim Model School
-  </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
-  <style>
-   body {
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Al Ibrahim Model School</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
+    <style>
+        body {
             font-family: 'Roboto', sans-serif;
         }
-  </style>
- </head>
- <body>
-  <nav class="bg-blue-600 p-4 text-white">
-   <div class="container mx-auto flex justify-between items-center">
-    
-    <img class="logo" src="assets/logo.png" alt="School Logo" width="50" height="50">
-
-    <div class="text-2xl font-bold">
-     Al Ibrahim Model School
+    </style>
+</head>
+<body>
+<nav class="bg-blue-600 p-4 text-white">
+    <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
+        <img class="logo mb-2 md:mb-0" src="assets/logo.png" alt="School Logo" width="50" height="50">
+        <div class="text-2xl font-bold text-center md:text-left">
+            Al Ibrahim Model School
+        </div>
+        <div class="space-x-4 mt-2 md:mt-0">
+            <a class="hover:underline" href="#home">Home</a>
+            <a class="hover:underline" href="#about">About</a>
+            <a class="hover:underline" href="#news">News</a>
+            <a class="hover:underline" href="#contact">Contact</a>
+        </div>
     </div>
-    <div class="space-x-4">
-     <a class="hover:underline" href="#home">
-      Home
-     </a>
-     <a class="hover:underline" href="#about">
-      About
-     </a>
-     <a class="hover:underline" href="#news">
-      News
-     </a>
-     <a class="hover:underline" href="#contact">
-      Contact
-     </a>
+</nav>
+<section class="bg-cover bg-center h-screen" id="home" style="background-image: url('assets/342392440_1185379878834382_6142273777744421446_n.jpg');">
+    <div class="bg-black bg-opacity-50 h-full flex items-center justify-center">
+        <div class="text-center text-white">
+            <h1 class="text-4xl md:text-5xl font-bold mb-4">Welcome to Al Ibrahim Model School</h1>
+            <p class="text-lg md:text-xl mb-8">Empowering Students for a Brighter Future</p>
+            <a class="bg-blue-600 px-6 py-3 rounded-full text-lg font-semibold hover:bg-blue-700" href="#about">Learn More</a>
+        </div>
     </div>
-   </div>
-  </nav>
-  <section class="bg-cover bg-center h-screen" id="home" style="background-image: url('assets/342392440_1185379878834382_6142273777744421446_n.jpg');">
-   <div class="bg-black bg-opacity-50 h-full flex items-center justify-center">
-    <div class="text-center text-white">
-     <h1 class="text-5xl font-bold mb-4">
-      Welcome to Al Ibrahim Model School
-     </h1>
-     <p class="text-xl mb-8">
-      Empowering Students for a Brighter Future
-     </p>
-     <a class="bg-blue-600 px-6 py-3 rounded-full text-lg font-semibold hover:bg-blue-700" href="#about">
-      Learn More
-     </a>
+</section>
+<section class="py-20 bg-gray-100" id="about">
+    <div class="container mx-auto text-center">
+        <h2 class="text-3xl md:text-4xl font-bold mb-8">About Us</h2>
+        <img alt="School building with students and teachers" class="mb-4 rounded-lg mx-auto w-full max-w-xs" src="assets/470172056_574808535248117_6687799956838457358_n.jpg"/>
+        <p class="text-lg mb-8">Al Ibrahim Model School is dedicated to providing quality education to students, fostering their growth and development in a nurturing environment.</p>
+        <div class="flex flex-col md:flex-row justify-center space-x-0 md:space-x-8 space-y-8 md:space-y-0">
+            <div class="w-full md:w-1/3 bg-white p-6 rounded-lg shadow-lg">
+                <img alt="School building with students and teachers" class="mb-4 rounded-lg w-full" src="assets/470172056_574808535248117_6687799956838457358_n.jpg"/>
+                <h3 class="text-2xl font-bold mb-2">Our Mission</h3>
+                <p>To provide a holistic education that nurtures the intellectual, emotional, and social development of our students.</p>
+            </div>
+            <div class="w-full md:w-1/3 bg-white p-6 rounded-lg shadow-lg">
+                <img alt="Classroom with students engaged in learning activities" class="mb-4 rounded-lg w-full" src="assets/468217210_555613897215064_4419478517467236604_n.jpg"/>
+                <h3 class="text-2xl font-bold mb-2">Our Vision</h3>
+ <p>To be a leading educational institution that prepares students for success in a dynamic world.</p>
+            </div>
+            <div class="w-full md:w-1/3 bg-white p-6 rounded-lg shadow-lg">
+                <img alt="Teacher interacting with students in a classroom" class="mb-4 rounded-lg w-full" src="assets/317731129_150152891094502_6899374688293730385_n.jpg"/>
+                <h3 class="text-2xl font-bold mb-2">Our Values</h3>
+                <p>Integrity, Excellence, Respect, and Innovation are at the core of everything we do.</p>
+            </div>
+        </div>
     </div>
-   </div>
-  </section>
-  <section class="py-20 bg-gray-100" id="about">
-   <div class="container mx-auto text-center">
-    <h2 class="text-4xl font-bold mb-8">
-     About Us
-    </h2>
-    <img alt="School building with students and teachers" class="mb-4 rounded-lg mx-auto" height="300" src="assets/470172056_574808535248117_6687799956838457358_n.jpg" width="300"/>
-    <p class="text-lg mb-8">
-     Al Ibrahim Model School is dedicated to providing quality education to students, fostering their growth and development in a nurturing environment.
-    </p>
-    <div class="flex justify-center space-x-8">
-     <div class="w-1/3 bg-white p-6 rounded-lg shadow-lg">
-      <img alt="School building with students and teachers" class="mb-4 rounded-lg" height="300" src="assets/470172056_574808535248117_6687799956838457358_n.jpg" width="300"/>
-      <h3 class="text-2xl font-bold mb-2">
-       Our Mission
-      </h3>
-      <p>
-       To provide a holistic education that nurtures the intellectual, emotional, and social development of our students.
-      </p>
-     </div>
-     <div class="w-1/3 bg-white p-6 rounded-lg shadow-lg">
-      <img alt="Classroom with students engaged in learning activities" class="mb-4 rounded-lg" height="200" src="assets/468217210_555613897215064_4419478517467236604_n.jpg" width="300"/>
-      <h3 class="text-2xl font-bold mb-2">
-       Our Vision
-      </h3>
-      <p>
-       To be a leading educational institution that prepares students for success in a dynamic world.
-      </p>
-     </div>
-     <div class="w-1/3 bg-white p-6 rounded-lg shadow-lg">
-      <img alt="Teacher interacting with students in a classroom" class="mb-4 rounded-lg" height="200" src="assets/317731129_150152891094502_6899374688293730385_n.jpg" width="300"/>
-      <h3 class="text-2xl font-bold mb-2">
-       Our Values
-      </h3>
-      <p>
-       Integrity, Excellence, Respect, and Innovation are at the core of everything we do.
-      </p>
-     </div>
+</section>
+<section class="py-20" id="news">
+    <div class="container mx-auto text-center">
+        <h2 class="text-3xl md:text-4xl font-bold mb-8">Latest News</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <img alt="Students participating in a school event" class="mb-4 rounded-lg w-full" src="assets/470200764_574808285248142_6295272383332622225_n.jpg"/>
+                <h3 class="text-2xl font-bold mb-2">Annual Sports Day</h3>
+                <p>Join us for a day of fun and excitement at our Annual Sports Day. All students and parents are welcome!</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <img alt="Students presenting projects at a science fair" class="mb-4 rounded-lg w-full" src="assets/471215368_572088378900949_463171480757987323_n.jpg"/>
+                <h3 class="text-2xl font-bold mb-2">Annual Tour</h3>
+                <p>Our students embarked on an exciting annual tour, exploring new destinations and learning opportunities. It was a memorable experience filled with adventure, discovery, and fun!</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <img alt="Graduating students celebrating their achievement" class="mb-4 rounded-lg w-full" src="assets/469890177_574808208581483_5703426645487941119_n.jpg"/>
+                <h3 class="text-2xl font-bold mb-2">Graduation Ceremony</h3>
+                <p>We celebrated the achievements of our graduating class with a memorable ceremony. Best wishes to all graduates!</p>
+            </div>
+        </div>
     </div>
-   </div>
-  </section>
-  <section class="py-20" id="news">
-   <div class="container mx-auto text-center">
-    <h2 class="text-4xl font-bold mb-8">
-     Latest News
-    </h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-     <div class="bg-white p-6 rounded-lg shadow-lg">
-      <img alt="Students participating in a school event" class="mb-4 rounded-lg" height="200" src="assets/470200764_574808285248142_6295272383332622225_n.jpg" width="300"/>
-      <h3 class="text-2xl font-bold mb-2">
-       Annual Sports Day
-      </h3>
-      <p>
-       Join us for a day of fun and excitement at our Annual Sports Day. All students and parents are welcome!
-      </p>
-     </div>
-     <div class="bg-white p-6 rounded-lg shadow-lg">
-      <img alt="Students presenting projects at a science fair" class="mb-4 rounded-lg" height="200" src="assets/471215368_572088378900949_463171480757987323_n.jpg" width="300"/>
-      <h3 class="text-2xl font-bold mb-2">
-        Annual Tour
-      </h3>
-      <p>
-        Our students embarked on an exciting annual tour, exploring new destinations and learning opportunities. It was a memorable experience filled with adventure, discovery, and fun!
-      </p>
-     </div>
-     <div class="bg-white p-6 rounded-lg shadow-lg">
-      <img alt="Graduating students celebrating their achievement" class="mb-4 rounded-lg" height="200" src="assets/469890177_574808208581483_5703426645487941119_n.jpg" width="300"/>
-      <h3 class="text-2xl font-bold mb-2">
-       Graduation Ceremony
-      </h3>
-      <p>
-       We celebrated the achievements of our graduating class with a memorable ceremony. Best wishes to all graduates!
-      </p>
-     </div>
+</section>
+<section class="py-20 bg-gray-100" id="contact">
+    <div class="container mx-auto text-center">
+        <h2 class="text-3xl md:text-4xl font-bold mb-8">Contact Us</h2>
+        <p class="text-lg mb-8">We would love to hear from you! Please reach out with any questions or inquiries.</p>
+        <form class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-lg">
+            <div class="mb-4">
+                <label class="block text-left text-gray-700 font-bold mb-2" for="name">Name</label>
+                <input class="w-full px-3 py-2 border rounded-lg" id="name" placeholder="Your Name" type="text"/>
+            </div>
+            <div class="mb-4">
+                <label class="block text-left text-gray-700 font-bold mb-2" for="email">Email</label>
+                <input class="w-full px-3 py-2 border rounded-lg" id="email" placeholder="Your Email" type="email"/>
+            </div>
+            <div class="mb-4">
+                <label class="block text-left text-gray-700 font-bold mb-2" for="message">Message</label>
+                <textarea class="w-full px-3 py-2 border rounded-lg" id="message" placeholder="Your Message" rows="4"></textarea>
+            </div>
+            <button class="bg-blue-600 text-white px-6 py-3 rounded-full font-semibold hover:bg-blue-700" type="submit">Send Message</button>
+        </form>
     </div>
-   </div>
-  </section>
-  <section class="py-20 bg-gray-100" id="contact">
-   <div class="container mx-auto text-center">
-    <h2 class="text-4xl font-bold mb-8">
-     Contact Us
-    </h2>
-    <p class="text-lg mb-8">
-     We would love to hear from you! Please reach out with any questions or inquiries.
-    </p>
-    <form class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-lg">
-     <div class="mb-4">
-      <label class="block text-left text-gray-700 font-bold mb-2" for="name">
-       Name
-      </label>
-      <input class="w-full px-3 py-2 border rounded-lg" id="name" placeholder="Your Name" type="text"/>
-     </div>
-     <div class="mb-4">
-      <label class="block text-left text-gray-700 font-bold mb-2" for="email">
-       Email
-      </label>
-      <input class="w-full px-3 py-2 border rounded-lg" id="email" placeholder="Your Email" type="email"/>
-     </div>
-     <div class="mb-4">
-      <label class="block text-left text-gray-700 font-bold mb-2" for="message">
-       Message
-      </label>
-      <textarea class="w-full px-3 py-2 border rounded-lg" id="message" placeholder="Your Message" rows="4"></textarea>
-     </div>
-     <button class="bg-blue-600 text-white px-6 py-3 rounded-full font-semibold hover:bg-blue-700" type="submit">
-      Send Message
-     </button>
-    </form>
-   </div>
-  </section>
-  <footer class="bg-blue-600 text-white py-4">
-   <div class="container mx-auto text-center">
-    <p>
-     © 2023 Al Ibrahim Model School. All rights reserved.
-    </p>
-   </div>
-  </footer>
- </body>
-</html>
+</section>
+<footer class="bg-blue-600 text-white py-4">
+    <div class="container mx-auto text-center">
+        <p>© 2023 Al Ibrahim Model School. All rights reserved.</p>
+    </div>
+</footer>
+</body>
+</ html>
